# python-dependency-tools

./: .gitignore  Dockerfile  Dockerfile-pip  Dockerfile-poetry  Dockerfile-uv  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: compare-docker.yaml  compare-host.yaml  compare.yaml
