[project]
name = "example-project"
version = "0.0.1"
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi<1.0.0,>=0.110.0",
    "celery<6.0.0,>=5.0.5",
    "uvicorn<1.0.0,>=0.34.0",
    "redis<6.0.0,>=5.2.0",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
celery = "^5.0.5"
uvicorn = "^0.34.0"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pdm.build]
includes = []

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
